Bug 1574139: Fix an issue that prevented updates from completing if usernames contained a dot at the end of the username and general hardening of our file path verification. r=mhowell

Differential Revision: https://phabricator.services.mozilla.com/D71607