toolkit/mozapps/update/common/updatecommon.cpp
@@ -307,8 +307,17 @@ bool IsValidFullPath(NS_tchar* origFullPath) {
   }
 
   // The path must not traverse directories
-  if (NS_tstrstr(origFullPath, NS_T("..")) != nullptr ||
-      NS_tstrstr(origFullPath, NS_T("./")) != nullptr) {
+  if (NS_tstrstr(origFullPath, NS_T("/../")) != nullptr) {
+    return false;
+  }
+
+  // The path shall not have a path traversal suffix
+  const NS_tchar invalidSuffix[] = NS_T("/..");
+  size_t pathLen = NS_tstrlen(origFullPath);
+  size_t invalidSuffixLen = NS_tstrlen(invalidSuffix);
+  if (invalidSuffixLen <= pathLen &&
+      NS_tstrncmp(origFullPath + pathLen - invalidSuffixLen, invalidSuffix,
+                  invalidSuffixLen) == 0) {
     return false;
   }
 #endif
